[gd_scene load_steps=11 format=3 uid="uid://djvibnhpw0p7j"]

[ext_resource type="Script" uid="uid://dfs1gmvcmrm4t" path="res://Assets/Scripts/album_graphic.gd" id="1_d2skb"]
[ext_resource type="Texture2D" uid="uid://2ed68cy8mk2p" path="res://Assets/Sprites/TABLE.png" id="2_rvtyu"]
[ext_resource type="Texture2D" uid="uid://4318tnm7mxm8" path="res://Assets/Sprites/ALBUM.png" id="3_d2skb"]
[ext_resource type="FontFile" uid="uid://cp001gx7x21iv" path="res://Assets/FONTS/PlaywriteITTradGuides-Regular.ttf" id="4_1g8rd"]
[ext_resource type="FontFile" uid="uid://i7ebosbamfgb" path="res://Assets/FONTS/WalterTurncoat-Regular.ttf" id="5_d2skb"]

[sub_resource type="Theme" id="Theme_fsql6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_708fa"]
bg_color = Color(0.14140594, 0.40836042, 0.6980625, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_76aax"]
bg_color = Color(0.24265495, 0.52533334, 0.77237314, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3tjhu"]
bg_color = Color(0.14117648, 0.40784314, 0.69803923, 1)

[sub_resource type="Theme" id="Theme_577ft"]
Button/styles/hover = SubResource("StyleBoxFlat_708fa")
Button/styles/normal = SubResource("StyleBoxFlat_76aax")
Button/styles/pressed = SubResource("StyleBoxFlat_3tjhu")

[node name="Album" type="Node2D"]
script = ExtResource("1_d2skb")

[node name="FUNDO MESA" type="Sprite2D" parent="."]
position = Vector2(576.50006, 325.71875)
scale = Vector2(0.5994792, 0.5994792)
texture = ExtResource("2_rvtyu")

[node name="ALBUM" type="Sprite2D" parent="."]
position = Vector2(570, 302)
scale = Vector2(1.1392157, 1.1392157)
texture = ExtResource("3_d2skb")

[node name="ESPAÇO PEIXE PARGO" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 214.0
offset_top = 74.0
offset_right = 554.0
offset_bottom = 261.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fsql6")
color = Color(1, 1, 1, 0.43137255)

[node name="PEIXE PARGO" type="Label" parent="ESPAÇO PEIXE PARGO"]
layout_mode = 0
offset_left = 87.0
offset_top = 180.99998
offset_right = 246.0
offset_bottom = 227.0
theme_override_colors/font_color = Color(0.16078432, 0.20392157, 0.21176471, 1)
theme_override_fonts/font = ExtResource("4_1g8rd")
theme_override_font_sizes/font_size = 24
text = "Peixe Pargo"
horizontal_alignment = 1

[node name="ESPAÇO RAIA MANTA" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 586.0
offset_top = 311.0
offset_right = 926.0
offset_bottom = 498.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.43137255)

[node name="RAIA MANTA" type="Label" parent="ESPAÇO RAIA MANTA"]
layout_mode = 0
offset_left = 94.0
offset_top = 181.0
offset_right = 254.0
offset_bottom = 227.00002
theme_override_colors/font_color = Color(0.16078432, 0.20392157, 0.21176471, 1)
theme_override_fonts/font = ExtResource("4_1g8rd")
theme_override_font_sizes/font_size = 24
text = "Raia Manta"
horizontal_alignment = 1

[node name="ESPAÇO TARTARUGA2" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 214.0
offset_top = 311.0
offset_right = 554.0
offset_bottom = 498.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.43137255)

[node name="TARTARUGA" type="Label" parent="ESPAÇO TARTARUGA2"]
layout_mode = 0
offset_left = 38.0
offset_top = 185.99997
offset_right = 298.0
offset_bottom = 231.99997
theme_override_colors/font_color = Color(0.16078432, 0.20392157, 0.21176471, 1)
theme_override_fonts/font = ExtResource("4_1g8rd")
theme_override_font_sizes/font_size = 24
text = "Tartaruga Marinha"
horizontal_alignment = 1

[node name="ESPAÇO ALBATROZ" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 586.0
offset_top = 74.0
offset_right = 926.0
offset_bottom = 261.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.43137255)

[node name="RAIA MANTA3" type="Label" parent="ESPAÇO ALBATROZ"]
layout_mode = 0
offset_left = 57.0
offset_top = 185.99997
offset_right = 275.0
offset_bottom = 231.99997
theme_override_colors/font_color = Color(0.16078432, 0.20392157, 0.21176471, 1)
theme_override_fonts/font = ExtResource("4_1g8rd")
theme_override_font_sizes/font_size = 24
text = "Albatroz"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
z_index = 5
offset_left = 900.0
offset_top = 550.0
offset_right = 1100.0
offset_bottom = 614.0
theme = SubResource("Theme_577ft")
theme_override_fonts/font = ExtResource("5_d2skb")
theme_override_font_sizes/font_size = 24
text = "PRÓXIMO DIA"

[node name="Button2" type="Button" parent="."]
visible = false
z_index = 5
offset_left = 575.0
offset_top = 550.0
offset_right = 885.0
offset_bottom = 614.0
theme = SubResource("Theme_577ft")
theme_override_fonts/font = ExtResource("5_d2skb")
theme_override_font_sizes/font_size = 24
text = "ENTREGAR PRA VOVÓ"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
